--- a/crates/terminal/Cargo.toml
+++ b/crates/terminal/Cargo.toml
@@ -27,4 +27,6 @@ dirs = "4.0.0"
 gpui = { path = "../gpui", features = ["test-support"] }
 client = { path = "../client", features = ["test-support"]}
 project = { path = "../project", features = ["test-support"]}
+workspace = { path = "../workspace", features = ["test-support"] }
+
 
