Deploy context menu when clicking on split icon

--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -14,6 +14,7 @@ test-support = ["client/test-support", "project/test-support", "settings/test-su
 client = { path = "../client" }
 clock = { path = "../clock" }
 collections = { path = "../collections" }
+context_menu = { path = "../context_menu" }
 gpui = { path = "../gpui" }
 language = { path = "../language" }
 menu = { path = "../menu" }
