--- a/crates/terminal/Cargo.toml
+++ b/crates/terminal/Cargo.toml
@@ -28,3 +28,4 @@ gpui = { path = "../gpui", features = ["test-support"] }
 client = { path = "../client", features = ["test-support"]}
 project = { path = "../project", features = ["test-support"]}
 workspace = { path = "../workspace", features = ["test-support"] }
+alacritty = "0.10.1"
