--- a/crates/terminal/Cargo.toml
+++ b/crates/terminal/Cargo.toml
@@ -22,6 +22,7 @@ futures = "0.3"
 ordered-float = "2.1.1"
 itertools = "0.10"
 dirs = "4.0.0"
+shellexpand = "2.1.0"
 
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
