--- a/crates/terminal/Cargo.toml
+++ b/crates/terminal/Cargo.toml
@@ -23,6 +23,8 @@ ordered-float = "2.1.1"
 itertools = "0.10"
 dirs = "4.0.0"
 shellexpand = "2.1.0"
+libc = "0.2"
+
 
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
