wip tab drag and drop

--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -15,6 +15,7 @@ client = { path = "../client" }
 clock = { path = "../clock" }
 collections = { path = "../collections" }
 context_menu = { path = "../context_menu" }
+drag_and_drop = { path = "../drag_and_drop" }
 gpui = { path = "../gpui" }
 language = { path = "../language" }
 menu = { path = "../menu" }
