--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [target.'cfg(all())']
 rustflags = [
+    "-Dwarnings",
     "-Aclippy::reversed_empty_ranges",
     "-Aclippy::missing_safety_doc",
     "-Aclippy::let_unit_value",
