--- a/crates/capture/Cargo.toml
+++ b/crates/capture/Cargo.toml
@@ -17,8 +17,11 @@ cocoa = "0.24"
 core-foundation = "0.9.3"
 core-graphics = "0.22.3"
 foreign-types = "0.3"
+futures = "0.3"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 objc = "0.2"
+parking_lot = "0.11.1"
+postage = { version = "0.4.1", features = ["futures-traits"] }
 simplelog = "0.9"
 
 [build-dependencies]
