Capture screen in BGRA8 and render it in `capture` example app

--- a/crates/media/Cargo.toml
+++ b/crates/media/Cargo.toml
@@ -10,5 +10,9 @@ doctest = false
 [dependencies]
 block = "0.1"
 core-foundation = "0.9.3"
+foreign-types = "0.3"
 metal = "0.21.0"
 objc = "0.2"
+
+[build-dependencies]
+bindgen = "0.59.2"
