Connect to LiveKit room in capture example

--- a/crates/live_kit/Cargo.toml
+++ b/crates/live_kit/Cargo.toml
@@ -9,6 +9,8 @@ path = "src/live_kit.rs"
 doctest = false
 
 [dependencies]
+core-foundation = "0.9.3"
+futures = "0.3"
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive", "rc"] }
