--- a/crates/capture/Cargo.toml
+++ b/crates/capture/Cargo.toml
@@ -18,10 +18,14 @@ core-foundation = "0.9.3"
 core-graphics = "0.22.3"
 foreign-types = "0.3"
 futures = "0.3"
+hmac = "0.12"
+jwt = "0.16"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 objc = "0.2"
 parking_lot = "0.11.1"
 postage = { version = "0.4.1", features = ["futures-traits"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
+sha2 = "0.10"
 simplelog = "0.9"
 
 [build-dependencies]
