--- a/crates/live_kit/Cargo.toml
+++ b/crates/live_kit/Cargo.toml
@@ -9,10 +9,13 @@ path = "src/live_kit.rs"
 doctest = false
 
 [dependencies]
+media = { path = "../media" }
+
 anyhow = "1.0.38"
 core-foundation = "0.9.3"
 core-graphics = "0.22.3"
 futures = "0.3"
+parking_lot = "0.11.1"
 
 [build-dependencies]
 serde = { version = "1.0", features = ["derive", "rc"] }
