--- a/crates/terminal/Cargo.toml
+++ b/crates/terminal/Cargo.toml
@@ -36,3 +36,4 @@ gpui = { path = "../gpui", features = ["test-support"] }
 client = { path = "../client", features = ["test-support"]}
 project = { path = "../project", features = ["test-support"]}
 workspace = { path = "../workspace", features = ["test-support"] }
+rand = "0.8.5"
