--- a/crates/project/Cargo.toml
+++ b/crates/project/Cargo.toml
@@ -52,6 +52,7 @@ smol = "1.2.5"
 thiserror = "1.0.29"
 toml = "0.5"
 rocksdb = "0.18"
+git2 = { version = "0.15", default-features = false }
 
 [dev-dependencies]
 client = { path = "../client", features = ["test-support"] }
