--- a/crates/zed/Cargo.toml
+++ b/crates/zed/Cargo.toml
@@ -27,6 +27,7 @@ context_menu = { path = "../context_menu" }
 client = { path = "../client" }
 clock = { path = "../clock" }
 contacts_panel = { path = "../contacts_panel" }
+contacts_titlebar_item = { path = "../contacts_titlebar_item" }
 contacts_status_item = { path = "../contacts_status_item" }
 diagnostics = { path = "../diagnostics" }
 editor = { path = "../editor" }
