--- a/crates/collab_titlebar_item/Cargo.toml
+++ b/crates/collab_titlebar_item/Cargo.toml
@@ -26,6 +26,7 @@ collections = { path = "../collections" }
 editor = { path = "../editor" }
 fuzzy = { path = "../fuzzy" }
 gpui = { path = "../gpui" }
+menu = { path = "../menu" }
 project = { path = "../project" }
 settings = { path = "../settings" }
 theme = { path = "../theme" }
