Move git related things into specialized git crate
Co-Authored-By: Mikayla Maki <mikayla@zed.dev>

--- a/crates/editor/Cargo.toml
+++ b/crates/editor/Cargo.toml
@@ -25,6 +25,7 @@ clock = { path = "../clock" }
 collections = { path = "../collections" }
 context_menu = { path = "../context_menu" }
 fuzzy = { path = "../fuzzy" }
+git = { path = "../git" }
 gpui = { path = "../gpui" }
 language = { path = "../language" }
 lsp = { path = "../lsp" }
