--- a/crates/room/Cargo.toml
+++ b/crates/room/Cargo.toml
@@ -13,6 +13,7 @@ test-support = [
     "collections/test-support",
     "gpui/test-support",
     "project/test-support",
+    "util/test-support"
 ]
 
 [dependencies]
@@ -20,6 +21,7 @@ client = { path = "../client" }
 collections = { path = "../collections" }
 gpui = { path = "../gpui" }
 project = { path = "../project" }
+util = { path = "../util" }
 
 anyhow = "1.0.38"
 futures = "0.3"
@@ -29,3 +31,4 @@ client = { path = "../client", features = ["test-support"] }
 collections = { path = "../collections", features = ["test-support"] }
 gpui = { path = "../gpui", features = ["test-support"] }
 project = { path = "../project", features = ["test-support"] }
+util = { path = "../util", features = ["test-support"] }
