--- a/crates/git/Cargo.toml
+++ b/crates/git/Cargo.toml
@@ -17,6 +17,8 @@ util = { path = "../util" }
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 smol = "1.2"
 parking_lot = "0.11.1"
+async-trait = "0.1"
+
 
 [dev-dependencies]
 unindent = "0.1.7"
