--- a/crates/journal/Cargo.toml
+++ b/crates/journal/Cargo.toml
@@ -16,3 +16,4 @@ chrono = "0.4"
 dirs = "4.0"
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 settings = { path = "../settings" }
+shellexpand = "2.1.0"
