--- a/crates/git/Cargo.toml
+++ b/crates/git/Cargo.toml
@@ -13,12 +13,15 @@ git2 = { version = "0.15", default-features = false }
 lazy_static = "1.4.0"
 sum_tree = { path = "../sum_tree" }
 text = { path = "../text" }
+collections = { path = "../collections" }
 util = { path = "../util" }
 log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 smol = "1.2"
 parking_lot = "0.11.1"
 async-trait = "0.1"
 
-
 [dev-dependencies]
 unindent = "0.1.7"
+
+[features]
+test-support = []
