--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -8,9 +8,15 @@ path = "src/workspace.rs"
 doctest = false
 
 [features]
-test-support = ["client/test-support", "project/test-support", "settings/test-support"]
+test-support = [
+    "call/test-support",
+    "client/test-support",
+    "project/test-support",
+    "settings/test-support"
+]
 
 [dependencies]
+call = { path = "../call" }
 client = { path = "../client" }
 collections = { path = "../collections" }
 context_menu = { path = "../context_menu" }
@@ -32,6 +38,7 @@ serde_json = { version = "1.0", features = ["preserve_order"] }
 smallvec = { version = "1.6", features = ["union"] }
 
 [dev-dependencies]
+call = { path = "../call", features = ["test-support"] }
 client = { path = "../client", features = ["test-support"] }
 gpui = { path = "../gpui", features = ["test-support"] }
 project = { path = "../project", features = ["test-support"] }
