--- a/crates/git/Cargo.toml
+++ b/crates/git/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/git.rs"
 [dependencies]
 anyhow = "1.0.38"
 clock = { path = "../clock" }
-git2 = { version = "0.15", default-features = false }
+rope = { path = "../rope" }
 lazy_static = "1.4.0"
 sum_tree = { path = "../sum_tree" }
 text = { path = "../text" }
@@ -20,6 +20,7 @@ smol = "1.2"
 parking_lot = "0.11.1"
 async-trait = "0.1"
 futures = "0.3"
+git2 = { version = "0.15", default-features = false }
 
 [dev-dependencies]
 unindent = "0.1.7"
