--- a/crates/vim/Cargo.toml
+++ b/crates/vim/Cargo.toml
@@ -14,6 +14,7 @@ command_palette = { path = "../command_palette" }
 editor = { path = "../editor" }
 gpui = { path = "../gpui" }
 language = { path = "../language" }
+rope = { path = "../rope" }
 search = { path = "../search" }
 serde = { version = "1.0", features = ["derive", "rc"] }
 settings = { path = "../settings" }
