--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -12,7 +12,9 @@ test-support = [
     "call/test-support",
     "client/test-support",
     "project/test-support",
-    "settings/test-support"
+    "settings/test-support",
+    "gpui/test-support",
+    "fs/test-support"
 ]
 
 [dependencies]
@@ -44,3 +46,4 @@ client = { path = "../client", features = ["test-support"] }
 gpui = { path = "../gpui", features = ["test-support"] }
 project = { path = "../project", features = ["test-support"] }
 settings = { path = "../settings", features = ["test-support"] }
+fs = { path = "../fs", features = ["test-support"] }
