--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -15,7 +15,9 @@ collections = { path = "../collections" }
 anyhow = "1.0.57"
 async-trait = "0.1"
 parking_lot = "0.11.1"
-sqlx = { version = "0.6.2", features = ["sqlite", "macros", "offline", "json", "runtime-async-std-rustls"] }
+rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
+rusqlite_migration = "1.0.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 gpui = { path = "../gpui", features = ["test-support"] }
