--- a/crates/live_kit_server/Cargo.toml
+++ b/crates/live_kit_server/Cargo.toml
@@ -12,7 +12,7 @@ doctest = false
 anyhow = "1.0.38"
 hmac = "0.12"
 jwt = "0.16"
-hyper = "0.14"
+hyper = { version = "0.14", features = ["client", "http1"] }
 prost = "0.8"
 prost-types = "0.8"
 serde = { version = "1.0", features = ["derive", "rc"] }
