--- a/crates/live_kit_server/Cargo.toml
+++ b/crates/live_kit_server/Cargo.toml
@@ -10,11 +10,12 @@ doctest = false
 
 [dependencies]
 anyhow = "1.0.38"
+futures = "0.3"
 hmac = "0.12"
 jwt = "0.16"
-hyper = { version = "0.14", features = ["client", "http1"] }
 prost = "0.8"
 prost-types = "0.8"
+reqwest = "0.11"
 serde = { version = "1.0", features = ["derive", "rc"] }
 sha2 = "0.10"
 
