--- a/crates/collab/.env.toml
+++ b/crates/collab/.env.toml
@@ -2,6 +2,9 @@ DATABASE_URL = "postgres://postgres@localhost/zed"
 HTTP_PORT = 8080
 API_TOKEN = "secret"
 INVITE_LINK_PREFIX = "http://localhost:3000/invites/"
+LIVE_KIT_SERVER = "http://localhost:7880"
+LIVE_KIT_KEY = "devkey"
+LIVE_KIT_SECRET = "secret"
 
 # HONEYCOMB_API_KEY=
 # HONEYCOMB_DATASET=
