WIP: Start integrating screen-sharing

--- a/crates/call/Cargo.toml
+++ b/crates/call/Cargo.toml
@@ -19,6 +19,7 @@ test-support = [
 [dependencies]
 client = { path = "../client" }
 collections = { path = "../collections" }
+live_kit_client = { path = "../live_kit_client" }
 gpui = { path = "../gpui" }
 project = { path = "../project" }
 util = { path = "../util" }
