Add more paths to dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,11 @@
-/target
-/manifest.yml
-/migrate.yml
+**/target
+zed.xcworkspace
+.DS_Store
+plugins/bin
+script/node_modules
+styles/node_modules
+crates/collab/static/styles.css
+vendor/bin
+assets/themes/*.json
+assets/themes/internal/*.json
+assets/themes/experiments/*.json
