--- a/crates/live_kit_client/Cargo.toml
+++ b/crates/live_kit_client/Cargo.toml
@@ -13,7 +13,6 @@ name = "test_app"
 
 [features]
 test-support = [
-    "async-broadcast",
     "async-trait", 
     "collections/test-support",
     "gpui/test-support",
@@ -29,12 +28,13 @@ live_kit_server = { path = "../live_kit_server", optional = true }
 media = { path = "../media" }
 
 anyhow = "1.0.38"
+async-broadcast = "0.4"
 core-foundation = "0.9.3"
 core-graphics = "0.22.3"
 futures = "0.3"
+log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 parking_lot = "0.11.1"
 
-async-broadcast = { version = "0.4", optional = true }
 async-trait = { version = "0.1", optional = true }
 lazy_static = { version = "1.4", optional = true }
 nanoid = { version ="0.4", optional = true}
@@ -58,7 +58,6 @@ futures = "0.3"
 hmac = "0.12"
 jwt = "0.16"
 lazy_static = "1.4"
-log = { version = "0.4.16", features = ["kv_unstable_serde"] }
 objc = "0.2"
 parking_lot = "0.11.1"
 postage = { version = "0.4.1", features = ["futures-traits"] }
