--- a/crates/workspace/Cargo.toml
+++ b/crates/workspace/Cargo.toml
@@ -18,6 +18,7 @@ test-support = [
 ]
 
 [dependencies]
+db = { path = "../db" }
 call = { path = "../call" }
 client = { path = "../client" }
 collections = { path = "../collections" }
