Improve deploy scripts

--- a/crates/collab/k8s/migrate.template.yml
+++ b/crates/collab/k8s/migrate.template.yml
@@ -9,6 +9,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: migrator
+          imagePullPolicy: Always
           image: ${ZED_IMAGE_ID}
           args:
             - migrate
