--- a/.github/workflows/publish_collab_image.yml
+++ b/.github/workflows/publish_collab_image.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           clean: false
+          submodules: 'recursive'
 
       - name: Check that tag version matches package version
         run: |
