Embed live_kit_client's .gitignore into top-level .gitignore
Co-authored-by: Max Brunsfeld <max@zed.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 /assets/themes/Internal/*.json
 /assets/themes/Experiments/*.json
 **/venv
+.build
+Packages
+*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
