--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,61 @@
 [workspace]
-members = ["crates/*"]
+members = [
+    "crates/activity_indicator",
+    "crates/assets",
+    "crates/auto_update",
+    "crates/breadcrumbs",
+    "crates/call",
+    "crates/cli",
+    "crates/client",
+    "crates/clock",
+    "crates/collab",
+    "crates/collab_ui",
+    "crates/collections",
+    "crates/command_palette",
+    "crates/context_menu",
+    "crates/db",
+    "crates/diagnostics",
+    "crates/drag_and_drop",
+    "crates/editor",
+    "crates/file_finder",
+    "crates/fs",
+    "crates/fsevent",
+    "crates/fuzzy",
+    "crates/git",
+    "crates/go_to_line",
+    "crates/gpui",
+    "crates/gpui_macros",
+    "crates/journal",
+    "crates/language",
+    "crates/live_kit_client",
+    "crates/live_kit_server",
+    "crates/lsp",
+    "crates/media",
+    "crates/menu",
+    "crates/outline",
+    "crates/picker",
+    "crates/plugin",
+    "crates/plugin_macros",
+    "crates/plugin_runtime",
+    "crates/project",
+    "crates/project_panel",
+    "crates/project_symbols",
+    "crates/rope",
+    "crates/rpc",
+    "crates/search",
+    "crates/settings",
+    "crates/snippet",
+    "crates/sum_tree",
+    "crates/terminal",
+    "crates/text",
+    "crates/theme",
+    "crates/theme_selector",
+    "crates/theme_testbench",
+    "crates/util",
+    "crates/vim",
+    "crates/workspace",
+    "crates/zed",
+]
 default-members = ["crates/zed"]
 resolver = "2"
 
